--- a/local.yml
+++ b/local.yml
@@ -2,9 +2,12 @@
   connection: local
   become: true
 
+  pre_tasks:
+    - name: update repositories
+    apt:
+      update_cache: yes
+    changed_when: False
+
   tasks:
-  - name: Install packages
-    package:
-      name:
-        - htop
-        - yay
+    - include: tasks/matrix_notify.yml
+    # - include: tasks/packages.yml
