--- a/local.yml
+++ b/local.yml
@@ -2,11 +2,11 @@
   connection: local
   become: true
 
-  pre_tasks:
-    - name: update repositories
-    apt:
-      update_cache: yes
-    changed_when: False
+  # pre_tasks:
+  #   - name: update repositories
+  #   apt:
+  #     update_cache: yes
+  #   changed_when: False
 
   tasks:
     - include: tasks/matrix_notify.yml
