--- a/tasks/matrix_notify.yml
+++ b/tasks/matrix_notify.yml
@@ -1,4 +1,4 @@
 - name: Install packages
   git:
     repo: https://github.com/fabianonline/matrix.sh.git
-    dest: /bin/
+    dest: /bin/matrix_notify
