working out bugs on matrix_notify

--- a/tasks/matrix_notify.yml
+++ b/tasks/matrix_notify.yml
@@ -5,29 +5,29 @@
       - jq
       - curl
 
-  git:
-    name: Installing matrix.sh
-    repo: https://github.com/fabianonline/matrix.sh.git
-    dest: /tmp/matrix.sh/
+  # git:
+  #   name: Installing matrix.sh
+  #   repo: https://github.com/fabianonline/matrix.sh.git
+  #   dest: /tmp/matrix.sh/
 
-  copy:
-    name: Moving matrix.sh into /usr/local/bin/
-    src: /tmp/matrix.sh/matrix.sh
-    dest: /usr/local/bin/matrix.sh
-    owner: root
-    group: root
-    mode: u=rw,g=r,o=x
-    backup: no
+  # copy:
+  #   name: Moving matrix.sh into /usr/local/bin/
+  #   src: /tmp/matrix.sh/matrix.sh
+  #   dest: /usr/local/bin/matrix.sh
+  #   owner: root
+  #   group: root
+  #   mode: u=rw,g=r,o=x
+  #   backup: no
 
-  vars_prompt:
-    - name: home_server
-      prompt: Enter the API key
-    - name: default_room
-      prompt: What is your password?
-    - name: token
-      prompt: What is your password?
+  # vars_prompt:
+  #   - name: home_server
+  #     prompt: Enter the API key
+  #   - name: default_room
+  #     prompt: What is your password?
+  #   - name: token
+  #     prompt: What is your password?
 
-  lineinfile:
-    path: /etc/profile.d/00-aliases.sh
-    line: alias matrixLog='bash /usr/local/bin/matrix.sh --homeserver={{ home_server }} --token={{ token }} --room=\{{ default_room }} -'
-    create: yes
+  # lineinfile:
+  #   path: /etc/profile.d/00-aliases.sh
+  #   line: alias matrixLog='bash /usr/local/bin/matrix.sh --homeserver={{ home_server }} --token={{ token }} --room=\{{ default_room }} -'
+  #   create: yes
