--- a/tasks/matrix_notify.yml
+++ b/tasks/matrix_notify.yml
@@ -6,7 +6,7 @@
       - curl
 
 - git:
-    name: Installing matrix.sh
+    # name: Installing matrix.sh
     repo: https://github.com/fabianonline/matrix.sh.git
     dest: /tmp/matrix.sh/
 
