--- a/tasks/matrix_notify.yml
+++ b/tasks/matrix_notify.yml
@@ -18,8 +18,8 @@
     group: root
     mode: u=rw,g=r,o=x
     backup: no
-
-- vars_prompt:
+- name: Getting matrix account info
+  vars_prompt:
     - name: home_server
       prompt: Enter the API key
     - name: default_room
