--- a/tasks/matrix_notify.yml
+++ b/tasks/matrix_notify.yml
@@ -18,7 +18,7 @@
     group: root
     mode: u=rw,g=r,o=x
     backup: no
-- name: Getting matrix account info
+- name: Obtain matrix account info
   vars_prompt:
     - name: home_server
       prompt: Enter the API key
