working out bugs on matrix_notify

--- a/tasks/matrix_notify.yml
+++ b/tasks/matrix_notify.yml
@@ -19,15 +19,15 @@
     mode: u=rwx,g=rx,o=xr
     backup: no
 
-  vars_prompt:
-    - name: home_server
-      prompt: Enter the API key
+  # vars_prompt:
+  #   - name: home_server
+  #     prompt: Enter the API key
 
-    - name: default_room
-      prompt: What is your password?
-      
-    - name: token
-      prompt: What is your password?
+  #   - name: default_room
+  #     prompt: What is your password?
+
+  #   - name: token
+  #     prompt: What is your password?
 
   # lineinfile:
   #   path: /etc/profile.d/00-aliases.sh
