--- a/tasks/matrix_notify.yml
+++ b/tasks/matrix_notify.yml
@@ -19,7 +19,8 @@
     mode: u=rwx,g=rx,o=xr
     backup: no
 
-- vars_prompt:
+- name: Test
+  vars_prompt:
     - name: home_server
       prompt: Enter the API key
 
