--- a/tasks/matrix_notify.yml
+++ b/tasks/matrix_notify.yml
@@ -1,16 +1,7 @@
-- name: Install packages
-  package:
-    name:
-      - git
-      - jq
-      - curl
-
 - name: Installing matrix.sh
   git:
     repo: https://github.com/fabianonline/matrix.sh.git
     dest: /tmp/matrix.sh/
-
-- name: Test
 
 - name: Moving matrix.sh into /usr/local/bin/
   copy:
@@ -21,17 +12,7 @@
     mode: u=rwx,g=rx,o=xr
     backup: no
 
-  # vars_prompt:
-  #   - name: home_server
-  #     prompt: Enter the API key
-
-    # - name: default_room
-    #   prompt: What is your password?
-      
-    # - name: token
-    #   prompt: What is your password?
-
-  # lineinfile:
-  #   path: /etc/profile.d/00-aliases.sh
-  #   line: alias matrixLog='bash /usr/local/bin/matrix.sh --homeserver={{ home_server }} --token={{ token }} --room=\{{ default_room }} -'
-  #   create: yes
+  lineinfile:
+    path: /etc/profile.d/00-aliases.sh
+    line: alias matrixLog='bash /usr/local/bin/matrix.sh --homeserver={{ home_server }} --token={{ token }} --room=\{{ default_room }} -'
+    create: yes
