--- a/local.yml
+++ b/local.yml
@@ -3,7 +3,8 @@
   connection: local
   become: true
 
-- name: Obtain matrix account info.
+- hosts: localhost
+  name: Obtain matrix account info.
   vars_prompt:
     - name: home_server
       prompt: Enter the API key
